<resources>
    <string name="app_name">Bioscope</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="action_sort_by">Sort by</string>
    <string name="action_sort_by_popularity">Most Popular</string>
    <string name="action_sort_by_rating">Highest Rated</string>
    <string name="rating">Rating</string>
    <string name="release_date">Released</string>
    <string name="details">Details</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="vote_average">Votes</string>
    <string name="action_share">Share</string>
    <string name="summary">Summary</string>
    <string name="title_activity_main2">Main2Activity</string>

</resources>
